Fixed icon alignment issue

--- a/src/components/person-card/person-card.module.css
+++ b/src/components/person-card/person-card.module.css
@@ -100,6 +100,7 @@
 
 .infoBox {
   display: flex;
+  align-items: center;
   margin-top: 10px;
 }
 
